[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_abm"
version = "0.0.0"
readme = "README.md"
description = "Py-ABM é uma biblioteca para calibração de Agent-Based Models (ABM) através de algoritmos evolucionários."

keywords = ["py_abm"]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: Stable",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese",
    "Programming Language :: Python :: 3.8",
]

dependencies = [
    "numpy==1.23.5",
    "pandas==2.0.0",
    "importlib-resources==5.12.0",
    "plotly==5.14.1",
    "pymoo==0.6.0.1",
    "kaleido==0.2.1",
    "pyswarms==1.3.0",
    "ijson==3.2.2",
    "pypop7==0.0.70",
    "shade_ils @ git+https://github.com/moesio-f/shadeils.git@v2.0.3"
]

[project.urls]
repository = "https://github.com/moesio-f/py-abm"

[tool.setuptools.packages.find]
where = ["src"]
